--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,21 +12,22 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_login: ^4.1.1
   shared_preferences: ^2.1.1
+  flutter_launcher_icons: ^0.11.0
+  fluentui_icons: ^1.0.0
+  intl: ^0.17.0
+  sensors_plus: ^3.0.1
+  geolocator: ^8.0.0
+  fluttertoast: ^8.2.1
+  battery_plus: ^3.0.5
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  
 
 flutter:
   uses-material-design: true
   # assets:
   #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
 
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
