--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   geolocator: ^8.0.0
   fluttertoast: ^8.2.1
   battery_plus: ^3.0.5
+  device_info_plus: ^9.0.1
+  qr_flutter: ^4.0.0
 
 dev_dependencies:
   flutter_test:
